2008-10-10  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/object-pool.scm, test/object-pool.scm
	  A simple object pooling library is added. This is very experimental but
	  in order to prepare to modify kahua.config module.

2008-10-10  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/protocol/worker.scm (make-socket-to-worker): logging when error occured.

2008-10-10  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, test/config.scm
	  Kahua made default configuration when kahua.conf is not readable, but now
	  Kahua report error if kahua.conf is not readable or contains properly expression.

2008-10-07  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* merge from yasuyuki_handle_errors branch rev 3403 to 3415.
	
2008-10-06  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-httpd.scm:
	  Fix the problem that directory->index-file returned #<undef> when
	  cannot find any index file.

2008-10-03  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/util.scm (kahua-error-string): remove debug logging.

	* src/kahua-httpd.scm (reply-gone): add
	(reply-error): add for <kahua-spvr-session-expired>.

	* cgi/kahua.cgi.in (cgi-error-proc): use kahua-error->status.

	* src/kahua/protocol/http.scm (kahua-error->status): add.

	* src/kahua/protocol/worker.scm (talk-to-worker): use condition-ref.

	* src/kahua/util.scm (kahua-stack-trace): add guard clause for testing.

2008-10-02  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/protocol/worker.scm (talk-to-worker): use <kahua-worker-unknown-error> instead of <kahua-worker-not-found>

	* cgi/kahua.cgi.in: <kahua-spvr-not-respond> 503
	<kahua-worker-not-found> 404
	<kahua-worker-not-respond> 503
	<kahua-spvr-session-expired> 410

2008-09-25  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/protocol/worker.scm (<kahua-spvr-not-respond>): add
	(<kahua-worker-expired>): add

2008-10-03  ENDO Yasuyuki  <yasuyuki@javaopen.org>
